--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
       console.log("Selamat Pagi"+i)
     }
   </script>
+  
+<a href="cetakangkan.html">
+  <button>Buka Cetak Angka</button>
+</a>
+  
 </body>
 </html>
